# Tron-LLM

./: README.md  pyproject.toml
tron_llm/: __init__.py  __main__.py  cli.py
